# Gptq-Babai-Quantization

./: .gitignore  README.md  main.py  pyproject.toml
experiments/: demo.ipynb
src/gptq_babai/: __init__.py  blockwise.py  core.py  hf_quant.py  lattice_utils.py
