[project]
name = "gptq-babai-quantization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "matplotlib>=3.0.0",
    "notebook>=7.4.4",
    "fpylll>=0.6.4",
    "cysignals>=1.12.4",
    "transformers>=4.54.0",
    "torch>=2.7.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gptq_babai"]
